<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NavigationTest</string>
    <string name="add_new_round">Add New Round</string>
    <string name="viewstats">View Stats</string>
    <string name="add_new_course">Add New Course To DB</string>
    <string name="select_course_placeholder">Select Course Placeholder</string>
    <string name="view_stats_placeholder">View Stats Placeholder</string>
    <string name="course_par">Course Par</string>
    <string name="next">Next</string>
    <string name="hole">Hole</string>
    <string name="edit">Edit</string>
    <string name="course_name">Course Name</string>
    <string name="par">Par</string>
    <string name="placeholder">Placeholder</string>
    <string name="check_par">Check Par</string>
    <string name="hole_1">Hole 1</string>
    <string name="next_hole">Next Hole</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="penalty">PENALTY</string>
    <string name="chip">CHIP</string>
    <string name="fairway">FAIRWAY</string>
    <string name="textview">TEXTVIEW</string>
    <string name="putts">PUTTS</string>
    <string name="score">SCORE</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="miss_left">Miss L</string>
    <string name="miss_right">Miss R</string>
    <string name="x">X</string>
    <string name="holeIdText">Hole:</string>
    <string name="holex">X</string>
    <string name="holepar">HolePar</string>
    <string name="parX">X</string>
</resources>
