<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pasiriihinen.golfstat.MainActivity"
    android:background="@color/backgroundColor">


    <Button
        android:id="@+id/btnAddNewRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnViewStats"
        android:text="@string/add_new_round" />

    <Button
        android:id="@+id/btnViewStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="100sp"
        android:layout_marginBottom="100sp"
        android:text="@string/viewstats" />

    <Button
        android:id="@+id/btnAddNewCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnViewStats"
        android:text="@string/add_new_course"/>

</RelativeLayout>